# Observed-Game-

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Catalogue.md  Features.md  README.md  ROADMAP.md  agents.md  architecture.md  sprite_roadmap.md
crates/observed_assets/: Cargo.toml  README.md  code_smells.md
crates/observed_assets/src/: lib.rs
crates/observed_authoring/: Cargo.toml  README.md  code_smells.md
crates/observed_authoring/src/: brush.rs  cad_renderer.rs  catalog.rs  generator.rs  lib.rs  manifest.rs  seam_auditor.rs  source.rs  tests.rs  tile.rs  tile_source.rs
crates/observed_authoring/src/tile_source/: catalog.rs  geometry.rs  halls.rs  mod.rs  rooms.rs  verticals.rs
crates/observed_doors/: Cargo.toml  README.md  code_smells.md
crates/observed_doors/src/: lib.rs
crates/observed_facility/: Cargo.toml  README.md  code_smells.md
crates/observed_facility/src/: constraints.rs  full_wfc.rs  junction.rs  lib.rs  map_spec.rs  room_def.rs  room_world.rs  wfc.rs
crates/observed_facility/src/full_wfc/: catalog.rs  collapse.rs  config.rs  constraints.rs  mod.rs  relayout.rs  tests.rs  topology.rs  validate.rs
crates/observed_facility/src/hex_wfc/: blueprint.rs  collapse.rs  constraints.rs  mod.rs  relayout.rs  relayout_tests.rs  tests.rs  topology.rs  trace.rs  validate.rs  variants.rs
crates/observed_hex/: Cargo.toml  README.md  code_smells.md
crates/observed_hex/src/: coords.rs  faces.rs  lib.rs  metrics.rs  ports.rs
crates/observed_interaction/: Cargo.toml  README.md  code_smells.md
crates/observed_interaction/src/: equipment.rs  lib.rs
crates/observed_interaction/src/interaction/: engine.rs  mod.rs  model.rs
crates/observed_match/: Cargo.toml  README.md  code_smells.md
crates/observed_match/src/: competition.rs  director.rs  elimination.rs  facility.rs  hybrid.rs  lib.rs  maze.rs  mutable.rs  teamplay.rs
crates/observed_match/src/full_wfc/: bot.rs  equipment.rs  geometry.rs  guardian.rs  knowledge.rs  mod.rs  model.rs
crates/observed_match/src/hex_wfc/: geometry.rs  mod.rs  model.rs
crates/observed_match/src/hybrid/: match_state.rs  mod.rs  replay.rs  round_step.rs  test.rs
crates/observed_net/: Cargo.toml  README.md  code_smells.md
crates/observed_net/src/: lan.rs  lib.rs  netmatch.rs  network.rs  protocol.rs
crates/observed_observation/: Cargo.toml  README.md  code_smells.md
crates/observed_observation/src/: contention.rs  lib.rs
crates/observed_progression/: Cargo.toml  README.md  code_smells.md
crates/observed_progression/src/: lib.rs  progression.rs  session.rs
crates/observed_progression/src/session/: lan.rs  (+5 more)
crates/observed_style/: Cargo.toml  README.md  code_smells.md
crates/observed_style/src/: lib.rs
crates/observed_traversal/: Cargo.toml  README.md  code_smells.md
crates/observed_traversal/src/: gantry.rs  lib.rs  rapier_controller.rs  world.rs
crates/player_input/: Cargo.toml  README.md  code_smells.md
crates/player_input/src/: lib.rs  rebind.rs
game/: Cargo.toml  README.md  code_smells.md
game/saves/: profile.save  settings.json
game/src/: arch_check.rs  bot.rs  camera.rs  capture.rs  content.rs  diagnostics.rs  flow.rs  guardian.rs  hallway.rs  items.rs  keystones.rs  lan.rs  layout.rs  lib.rs  main.rs  map_catalog.rs  map_validation.rs  maze.rs  navmesh.rs  rivals.rs  screens.rs  settings.rs  tacmap.rs  teleport.rs  tests.rs  wfc_interior.rs  wfc_maze.rs
game/src/capture/: bot_pov.rs  mod.rs  scenarios.rs  tour.rs
game/src/evidence/: audit.rs  driver.rs  mod.rs  snapshot.rs  tags.rs
game/src/full_wfc/: audio.rs  cues.rs  entities.rs  feedback.rs  hud.rs  input.rs  mod.rs  sim.rs  tacmap.rs  view.rs
game/src/hex_wfc/: audio.rs  cues.rs  entities.rs  feedback.rs  hud.rs  input.rs  lantern.rs  mod.rs  perf.rs  sim.rs  tacmap.rs
game/src/screens/: audio.rs  hud.rs  input.rs  lan.rs  loadout.rs  lobby.rs  match_runtime.rs  menu.rs  onboarding.rs  place.rs  replay.rs  settings.rs
game/src/sim/: director.rs  knowledge.rs  mod.rs  nav.rs  replay.rs  sightings.rs  state.rs
game/src/teleport/: aperture.rs  geom.rs  mod.rs  nav.rs  test.rs  transition.rs
game/src/view/: actor_metadata.rs  assets.rs  components.rs  environment.rs  mod.rs  sprites.rs  theme.rs
labs/archie_input_lab/: Cargo.toml  README.md  code_smells.md
labs/archie_input_lab/src/: adapter.rs  lab.rs  lib.rs  main.rs
labs/asset_lab/: Cargo.toml  README.md  code_smells.md
labs/asset_lab/src/: lab.rs  lib.rs  main.rs
labs/capture_pipeline_lab/: Cargo.toml  README.md  code_smells.md
labs/capture_pipeline_lab/src/: lib.rs  main.rs  model.rs
labs/constraint_lab/: Cargo.toml  README.md  code_smells.md
labs/constraint_lab/src/: lab.rs  lib.rs  main.rs  model.rs
labs/content_manifest_lab/: Cargo.toml  README.md  code_smells.md
labs/content_manifest_lab/assets/: content_manifest.json
labs/content_manifest_lab/src/: app.rs  lib.rs  main.rs  manifest.rs
labs/door_lab/: Cargo.toml  README.md  code_smells.md
labs/door_lab/src/: lib.rs  main.rs
labs/equipment_lab/: Cargo.toml  README.md  code_smells.md
labs/equipment_lab/src/: input.rs  lab.rs  lib.rs  main.rs
labs/fps_controller_lab/: Cargo.toml  README.md  code_smells.md
labs/fps_controller_lab/src/: controller.rs  lab.rs  lib.rs  main.rs
labs/fps_facility_lab/: Cargo.toml  README.md  code_smells.md
labs/fps_facility_lab/src/: lab.rs  lib.rs  main.rs  model.rs
labs/fps_hybrid_match_lab/: Cargo.toml  README.md  code_smells.md
labs/fps_hybrid_match_lab/src/: lab.rs  lib.rs  main.rs
labs/fps_match_lab/: Cargo.toml  README.md  code_smells.md
labs/fps_match_lab/src/: lab.rs  lib.rs  main.rs  model.rs
labs/fps_reroute_lab/: Cargo.toml  README.md  code_smells.md
labs/fps_reroute_lab/src/: lab.rs  lib.rs  main.rs  reroute.rs
labs/fps_rewire_lab/: Cargo.toml  README.md  code_smells.md
labs/fps_rewire_lab/src/: lab.rs  lib.rs  main.rs  model.rs
labs/fps_visibility_lab/: Cargo.toml  README.md  code_smells.md
labs/fps_visibility_lab/src/: field.rs  lab.rs  lib.rs  main.rs
server/: Cargo.toml  README.md
server/src/: lib.rs  main.rs
(+1986 files in other folders)
