[workspace]
members = [
    "crates/player_input",
    "crates/observed_core",
    "crates/observed_diagnostics",
    "crates/observed_content",
    "crates/observed_style",
    "crates/observed_assets",
    "crates/observed_observation",
    "crates/observed_doors",
    "crates/observed_facility",
    "crates/observed_traversal",
    "crates/observed_interaction",
    "crates/observed_progression",
    "crates/observed_net",
    "crates/observed_match",
    "crates/observed_hex",
    "crates/observed_authoring",
    "labs/menu_lab",
    "labs/control_lab",
    "labs/movement_lab",
    "labs/interaction_lab",
    "labs/room_lab",
    "labs/climbing_lab",
    "labs/equipment_lab",
    "labs/team_lab",
    "labs/facility_sandbox",
    "labs/observation_lab",
    "labs/contention_lab",
    "labs/constraint_lab",
    "labs/competition_lab",
    "labs/director_lab",
    "labs/replay_lab",
    "labs/route_lab",
    "labs/incentive_lab",
    "labs/hazard_lab",
    "labs/network_lab",
    "labs/lan_lab",
    "labs/session_lab",
    "labs/mutable_facility",
    "labs/competitive_facility",
    "labs/match_replay",
    "labs/fps_observation_lab",
    "labs/fps_controller_lab",
    "labs/fps_visibility_lab",
    "labs/fps_rewire_lab",
    "labs/fps_facility_lab",
    "labs/fps_match_lab",
    "labs/fps_maze_lab",
    "labs/fps_reroute_lab",
    "labs/fps_hybrid_match_lab",
    "labs/progression_lab",
    "labs/asset_lab",
    "labs/net_match_lab",
    "labs/fps_elevation_lab",
    "labs/gantry_lab",
    "labs/style_lab",
    "labs/door_lab",
    "labs/discovery_lab",
    "labs/inspector_lab",
    "labs/trenchbroom_lab",
    "labs/ldtk_schematic_lab",
    "labs/outline_legibility_lab",
    "labs/semantic_vfx_lab",
    "labs/capture_pipeline_lab",
    "labs/archie_input_lab",
    "labs/lab_observability_lab",
    "labs/navigation_probe_lab",
    "labs/wfc_proc_gen_lab",
    "labs/full_wfc_lab",
    "labs/oga_25d_lab",
    "labs/guardian_ai_lab",
    "labs/topology_lab",
    "labs/lighting_lab",
    "labs/wellshaft_lab",
    "labs/rapier_determinism_lab",
    "labs/rapier_controller_lab",
    "labs/rapier_authoring_lab",
    "labs/rapier_portal_lab",
    "labs/rapier_aesthetic_lab",
    "labs/content_manifest_lab",
    "labs/map_observer_lab",
    "labs/hex_wfc_lab",
    "labs/hex_tile_lab",
    "labs/hex_room_lab",
    "tools/content_baker",
    "server",
    "game",
]
resolver = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = false
