[package]
name = "capture_pipeline_lab"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "3d",
    "png",
    "bevy_post_process",
] }
# Phase A5 of the asset-integration roadmap. `0.16.0` is the Bevy `0.18`
# compatible line; `0.17.0` targets Bevy `0.19` and is intentionally avoided.
bevy_image_export = { version = "=0.16.0", default-features = false, features = ["png"] }
observed_style = { path = "../../crates/observed_style" }
