[package]
name = "content_manifest_lab"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["3d", "png"] }
observed_style = { path = "../../crates/observed_style" }
rapier3d = { version = "0.34", features = ["enhanced-determinism"] }
rapier_aesthetic_lab = { path = "../rapier_aesthetic_lab" }
rapier_portal_lab = { path = "../rapier_portal_lab" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
