[package]
name = "equipment_lab"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d", "png"] }
observed_core = { path = "../../crates/observed_core" }
# The equipment persistence model now lives in the production crate; this lab projects it.
observed_interaction = { path = "../../crates/observed_interaction" }
