[package]
name = "fps_hybrid_match_lab"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["3d", "png"] }
observed_core = { path = "../../crates/observed_core" }
# The match-brain model now lives in the production crate; this lab projects it.
observed_match = { path = "../../crates/observed_match" }
player_input = { path = "../../crates/player_input" }
observation_lab = { path = "../observation_lab" }
competition_lab = { path = "../competition_lab" }
director_lab = { path = "../director_lab" }
mutable_facility = { path = "../mutable_facility" }
competitive_facility = { path = "../competitive_facility" }
fps_controller_lab = { path = "../fps_controller_lab" }
fps_maze_lab = { path = "../fps_maze_lab" }
