[package]
name = "fps_reroute_lab"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["3d", "png"] }
observed_core = { path = "../../crates/observed_core" }
observation_lab = { path = "../observation_lab" }
constraint_lab = { path = "../constraint_lab" }
fps_maze_lab = { path = "../fps_maze_lab" }
fps_controller_lab = { path = "../fps_controller_lab" }
player_input = { path = "../../crates/player_input" }
